polish the code

--- a/task-3-cart/index.html
+++ b/task-3-cart/index.html
@@ -6,13 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
-    <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 </head>
 
 <body>
-
-
     <div class="container">
         <div class="row">
             <div class="col-4">
@@ -22,10 +19,9 @@
                         <h4> <span class="badge rounded-pill bg-secondary me-3">3</span></h4>
                     </div>
                 </div>
-
-
+                <!-- list starts -->
                 <ul class="list-group">
-
+                    <!-- first item -->
                     <li class="list-group-item">
                         <div class="d-flex justify-content-between align-items-center">
                             <h5 class="mb-0 fs-6">Product name</h5>
@@ -33,7 +29,7 @@
                         </div>
                         <div><small class="text-muted">Brief description</small></div>
                     </li>
-
+                    <!-- second item -->
                     <li class="list-group-item">
                         <div class="d-flex justify-content-between align-items-center">
                             <h5 class="mb-0 fs-6">Second product</h5>
@@ -41,7 +37,7 @@
                         </div>
                         <div><small class="text-muted">Brief description</small></div>
                     </li>
-
+                    <!-- third item -->
                     <li class="list-group-item">
                         <div class="d-flex justify-content-between align-items-center">
                             <h5 class="mb-0 fs-6">Third item</h5>
@@ -49,7 +45,7 @@
                         </div>
                         <div><small class="text-muted">Brief description</small></div>
                     </li>
-
+                    <!-- promo -->
                     <li class="list-group-item bg-light text-success">
                         <div class="d-flex justify-content-between align-items-center">
                             <h5 class="mb-0 fs-6">Promo code</h5>
@@ -57,18 +53,17 @@
                         </div>
                         <div><small>EXAMPLECODE</small></div>
                     </li>
-
+                    <!-- total -->
                     <li class="list-group-item">
                         <div class="d-flex justify-content-between align-items-center">
                             <h5 class="mb-0 fs-6 fw-normal">Total (USD)</h5>
                             <h5 class="mb-0"><span class="badge bg-transparent text-dark pe-0">$20</span></h5>
                         </div>
                     </li>
-
                 </ul>
             </div>
         </div>
-
+        <!-- second-part: add promo -->
         <div class="row mt-3">
             <div class="col-4">
                 <ul class="list-group">
@@ -83,8 +78,6 @@
                 </ul>
             </div>
         </div>
-
-
     </div>
 </body>
 
