add corect label for input

--- a/task-2-form/index.html
+++ b/task-2-form/index.html
@@ -16,7 +16,7 @@
         <form>
             <div class="row">
                 <div class="col">
-                    <h3 class="mt-3">Billing address</h3>
+                    <h3 class="mt-3"><small>Billing address</small></h3>
                 </div>
             </div>
             <!-- first name / last name -->
@@ -95,15 +95,15 @@
             <div class="row mb-3">
                 <div class="col">
                     <div class="form-check">
-                        <input type="checkbox" class="form-check-input" id="isSameAddress">
-                        <label class="form-check-label" for="isSameAddress">Save this information for next time</label>
+                        <input type="checkbox" class="form-check-input" id="saveInfo">
+                        <label class="form-check-label" for="saveInfo">Save this information for next time</label>
                     </div>
                 </div>
             </div>
             <hr>
             <div class="row">
                 <div class="col">
-                    <h3 class="mt-1">Payment</h3>
+                    <h3 class="mt-1"><small>Payment</small></h3>
                 </div>
             </div>
             <!-- radio input -->
