--- a/task-4-checkout-form/index.html
+++ b/task-4-checkout-form/index.html
@@ -118,7 +118,7 @@
                         <div class="row">
                             <div class="col">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="creditCard">
+                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="creditCard" checked>
                                     <label class="form-check-label" for="creditCard">
                                  Credit card
                                 </label>
