--- a/task-3-cart/index.html
+++ b/task-3-cart/index.html
@@ -27,7 +27,7 @@
                             <h5 class="mb-0 fs-6">Product name</h5>
                             <h5 class="mb-0"><span class="badge bg-transparent text-secondary fw-normal pe-0">$12</span></h5>
                         </div>
-                        <div><small class="text-muted">Brief description</small></div>
+                        <div><small class="text-muted pe-0">Brief description</small></div>
                     </li>
                     <!-- second item -->
                     <li class="list-group-item">
