--- a/task-1-layout/index.html
+++ b/task-1-layout/index.html
@@ -7,20 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colorful Layout</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <style>
+        .row {
+            height: 170px;
+        }
+    </style>
 </head>
 
 <body>
     <div class="container">
-
         <div class="row">
 
             <div class="col-4">
-                <div class="row" style="height: 170px">
+                <div class="row">
                     <div class="col">
                         <div class="box h-100" style="background-color: red"></div>
                     </div>
                 </div>
-                <div class="row" style="height: 170px">
+                <div class="row">
                     <div class="col">
                         <div class="box h-100" style="background-color: yellow"></div>
                     </div>
@@ -28,7 +32,7 @@
                         <div class="box h-100" style="background-color: green"></div>
                     </div>
                 </div>
-                <div class="row" style="height: 170px">
+                <div class="row">
                     <div class="col">
                         <div class="box h-100" style="background-color: blue"></div>
                     </div>
@@ -36,7 +40,7 @@
                         <div class="box h-100" style="background-color: greenyellow"></div>
                     </div>
                 </div>
-                <div class="row" style="height: 170px">
+                <div class="row">
                     <div class="col">
                         <div class="box h-100" style="background-color: blue"></div>
                     </div>
@@ -47,7 +51,7 @@
                         <div class="box h-100" style="background-color: greenyellow"></div>
                     </div>
                 </div>
-                <div class="row" style="height: 170px">
+                <div class="row">
                     <div class="col">
                         <div class="box h-100" style="background-color: blue"></div>
                     </div>
@@ -64,12 +68,12 @@
             </div>
 
             <div class="col-8">
-                <div class="row" style="height: 170px">
+                <div class="row">
                     <div class="col">
                         <div class="box h-100" style="background-color: sandybrown"></div>
                     </div>
                 </div>
-                <div class="row" style="height: 170px">
+                <div class="row">
                     <div class="col">
                         <div class="box h-100" style="background-color: violet"></div>
                     </div>
@@ -80,12 +84,12 @@
                         <div class="box h-100" style="background-color: pink"></div>
                     </div>
                 </div>
-                <div class="row" style="height: 170px">
+                <div class="row">
                     <div class="col">
                         <div class="box h-100" style="background-color: grey"></div>
                     </div>
                 </div>
-                <div class="row" style="height: 170px">
+                <div class="row">
                     <div class="col">
                         <div class="box h-100" style="background-color: cyan"></div>
                     </div>
@@ -96,9 +100,9 @@
                         <div class="box h-100" style="background-color: plum"></div>
                     </div>
                 </div>
-                <div class="row" style="height: 170px">
+                <div class="row">
                     <div class="col">
-                        <div class="row" style="height: 170px">
+                        <div class="row">
                             <div class="col">
                                 <div class="box h-100" style="background-color: cyan"></div>
                             </div>
@@ -111,7 +115,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="row" style="height: 170px">
+                        <div class="row">
                             <div class="col">
                                 <div class="box h-100" style="background-color: cyan"></div>
                             </div>
@@ -124,7 +128,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="row" style="height: 170px">
+                        <div class="row">
                             <div class="col">
                                 <div class="box h-100" style="background-color: cyan"></div>
                             </div>
